export interface Object {
    move();
}
