@startuml
'https://plantuml.com/class-diagram

interface Player

interface Command {
    +Command()
    +execute()
}

class MoveCommand

class ActionCommand

interface Object

Player *---> Object
Player -> Command

Command <|.. MoveCommand
Command <|.. ActionCommand

MoveCommand --> Object
ActionCommand --> Object

@enduml